package behavioral.iterator.bt1;

public abstract class Aggregate {
    public abstract MyIterator createIterator();
}
